# binja

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  release.toml
benches/: compare.rs
derive/: Cargo.toml
derive/src/: attribute.rs  bit_field.rs  bounds.rs  derive_enum.rs  derive_struct.rs  lib.rs
docs/: spec.md
examples/: bitfield.rs  container.rs  enum.rs  struct.rs
src/: config.rs  containers.rs  delete_me.rs  error.rs  lib.rs  main.rs  parser.rs  parser_helper.rs  serializer.rs
src/par/: bin_parse.rs  mod.rs  parser.rs  serde_impl.rs
src/parser/: bin_parse.rs  mod.rs  serde_impl.rs
src/ser/: mod.rs  serde_impl.rs  serializer.rs
src/serializer/: bin_serialize.rs  mod.rs  serde_impl.rs
tests/: parser_tests.rs  serializer_tests.rs
