[package]
name = "binja"
version = "0.1.0"
edition = "2024"


[lib]
name = "binja"
path = "src/lib.rs"

[dependencies]
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }

binja_derive = { path = "./derive" }

[dev-dependencies]
criterion = "0.5.1"
bincode = "2.0.1"


[[bench]]
name = "compare"
harness = false
