[package]
name = "binja"
version = "0.1.0"
edition = "2024"


[lib]
name = "binja"
path = "src/lib.rs"

[dependencies]
bytes = "1.10.1"

serde = { version = "1.0.219", features = ["derive"], optional = true }

binja_derive = { path = "./derive", optional = true }

[dev-dependencies]
criterion = "0.5.1"
bincode = "2.0.1"


[[bench]]
name = "compare"
harness = false


[features]
default = ["derive"]
derive = ["dep:binja_derive"]
serde = ["dep:serde"]
