[package]
name = "binja_derive"
version = "0.1.0"
edition = "2024"
description = "Derive for #[binja(BinarySerialize, BinaryParse)]."
publish = true
repository = "https://github.com/zakimoo/binja"
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
license = "MIT"


[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0.101", features = ["full", "extra-traits", "derive"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
darling = "0.20.11"
